ritkonsult/themes/ritkonsult-theme/static/css/style.css
/* ... */
/* --------------------------------------------------------- */

p {max-width: 50ch;}

.p { font-size: 1rem; line-height: 1.6; font-weight: initial;}

h1
,.h1
,h2
,.h2
,h3
,.h3 {
  line-height: var(--lh-1000);
  font-weight: 600;
}

h1, .h1 { 
  font-size: var(--fs-1000);
  font-weight: 800;
  hyphens: auto;
}
.h1 {
  margin-top: var(--scale4) !important;
}
h2, .h2 {
  font-size: var(--fs-800);
  hyphens: auto;
}
.h35 {font-size: calc(var(--scale1) + .22rem);}
h3, .h3, .card h2 { font-size: var(--fs-600); hyphens: auto;}
h4, .h4 { font-weight: 600;}

.h-tagline {
  display: block;
  margin-bottom: .5rem;
  font-size: var(--scale1);
  font-weight: var(--fw-regular);
}

strong { font-weight: 600;}

ul, ol { margin-left: 1.6ch;}
ul li, ol li { margin-top: var(--scale00); max-width: 50ch;}

.clean-list
,body > header ul
,body > footer ul
,body > header ol
,body > footer ol { list-style: none; margin-left: 0;}

body > header ul li {margin-top: 0;}

.number-list li { 
  list-style: decimal;
  margin-top: 1.2rem;
  margin-inline-start: 1.2rem;
}

.number-list li:first-child { margin-top: 0;}

.image-box img{ max-width: 100% !important; background-color: #fff;}
figcaption {margin-top: .6rem;}
.image-box img + img {margin-top: .4rem;}

blockquote {
  quotes: """ """ "‘" "’";
  position: relative;
  background-color: hsl(72.5, 26.1%, 82%);
  /* color: var(--clr-neutral-100); */
  border-radius: .5rem !important;
}

blockquote::after {
  content: '';
  position: absolute;
  bottom: -.95rem;
  left: 2rem;
  width: 4rem;
  height: 1rem;
  background-color: hsl(72.5, 26.1%, 82%);
  /* rgb(194, 194, 194); */
  -webkit-mask: url(/images/speechbubble2.svg) center top/contain no-repeat;
  mask: url(/images/speechbubble2.svg) center top/contain no-repeat;
}

blockquote p::before {
  content: open-quote;
}
blockquote p::after {
  content: close-quote;
}

figure > figcaption > cite {
  display: inline-block;
}

button {
  background-color: var(--clr-neutral-100);
  border-radius: 1.25em;
  /* box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 1px -2px, rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0, 0, 0, 0.12) 0px 1px 5px 0px; */
  /* box-shadow: rgb(0, 0, 0) 6px 6px 0px 0px; */
  outline: 2px solid --clr-neutral-900;
  position: relative;
  height: 2.5em;
  padding: 0 1.5em 0 1.5em;
  border: none;
}

.icon { 
  display: inherit;
  /* margin-bottom: -.15em; */
  vertical-align: middle;
  padding-inline-end: .15em;
  min-width: 1.1rem;
}

/* Utility classes */

.visually-hidden:not(:focus):not(:active) {
  position: absolute;
	position: absolute !important;
	width: 1px !important;
	height: 1px !important;
	padding: 0 !important;
	margin: -1px !important;
	overflow: hidden !important;
	clip: rect(0,0,0,0) !important;
	white-space: nowrap !important;
	border: 0 !important;
}

.flex { display: flex;}
.inline-flex { display: inline-flex; }
.inline-block { display: inline-block;}
.center-margin { margin-inline: auto;}
.right-margin { margin-inline-start: auto;}
.left-margin { margin-inline-end: auto;}

.center-margin-child {
  /* test */

}

.center-margin-child  > * {
  margin-inline: auto;
}
.center-margin-child > .h1 {
  text-align: center;
}
.left-margin-child  > * {
  margin-inline-end: auto;
}
.left-margin-child > h2 {
  text-align: left;
}
.right-margin-child {
  margin-inline-start: auto;
}
.right-margin-child {
  max-width: 50ch;
}

.grid
,.card-grid > ul { 
  --min: 14rem;
  display: grid;
  gap: var(--space);
  grid-template-columns: 100%;
}

@supports (width: min(var(--min), 100%)) {
  .grid
  ,.card-grid > ul {
    grid-template-columns: repeat(auto-fill, minmax(min(var(--min,14rem),100%), 1fr));
  }
}

/* below  h1: 4.2 h2:1.4 h3: h4: 1 */
/* defualt */
/* * { outline: 1px solid rgb(223, 13, 13);} */

.flow > * + *
,.flow > .h1 + p { margin-top: var(--scale3); } 

.flow > .wrapper + .wrapper
,.flow > h1 + *
,.flow > .h1-tag + *  { margin-top: var(--scale4);}

.flow > p + p
,.flow > .contact + p
,.flow > p + figure
,.card .flow > * + *   {margin-top: var(--scale1);}

.flow > h2 + p
,.card .flow > * + h4
,.card .flow > * + h3 { margin-top: var(--scale1);}

blockquote + figcaption
,.flow > figure + figure {margin-top: var(--scale2);}

.flow > .alternate-column + .alternate-column {
  margin-top: var(--scale5);
}

/* .flow > * + *
,.flow > .h1 + p { margin-top: var(--gap,4.2rem); } 
.flow > * + h4 { margin-top: 2.8rem;}
.flow > h1 + *
,.flow > .h1-tag + * {margin-top: 4.8em}
.flow > p + p
,.flow > .contact + p
,.card .flow > * + *   {margin-top: 1.4em}
.flow > h2 + p
,.card .flow > * + h4
,.card .flow > * + h3 { margin-top: 2.8rem;} */


/* section {
  margin-bottom: 2rem;
} */

.banner {
  padding: var(--scale1); /*2em*/
  border-left: 0.5em solid var(--clr-neutral-900);
  overflow-wrap: break-word;
  word-wrap: break-word;
  /* hyphens: auto; */
}

.banner h2 {
  font-size: 1.75em;
  font-weight: 600;
  align-self: center;
}

.banner-content {
  display: grid;
  align-items: center;
}

.h1-tag { margin-top: 0 !important;}

.hero { 
  padding-top: 1rem;
  padding-bottom: 1rem;
  margin-block: auto;
  overflow: auto;
  --page-bg: var(--clr-neutral-200);
  --page-bg-rgb: 102,102,102;
  --text-color-rgb: 0,0,0;
  background: linear-gradient(to right, var(--page-bg) 30%, rgba(var(--page-bg-rgb), 0)), linear-gradient(to right, rgba(var(--page-bg-rgb), 0), var(--page-bg) 70%) 0 100%, radial-gradient( farthest-side at 0% 50%, rgba(var(--text-color-rgb), 0.5), rgba(var(--text-color-rgb), 0) ), radial-gradient( farthest-side at 100% 50%, rgba(var(--text-color-rgb), 0.5), rgba(var(--text-color-rgb), 0) ) 0 100%;
  background-repeat: no-repeat;
  background-color: var(--page-bg);
  background-size: 40px 100%, 40px 100%, 14px 100%, 14px 100%;
  background-position: 0 0, 100%, 0 0, 100%;
  background-attachment: local, local, scroll, scroll;
  font-size: var(--fs-1100);
 }

 .hero-with-image {
  margin-inline: auto;
  max-width: 18ch;
 }
/* ... */

